[project]
name = "znflow"
version = "0.2.5"
description = "A general purpose framework for building and running computational graphs."
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "attrs>=25.1.0",
    "dask>=2025.2.0",
    "distributed>=2025.2.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "zninit>=0.1.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/zincware/znflow"
Releases = "https://github.com/zincware/znflow/releases"
Discord = "https://discord.gg/7ncfwhsnm4"
[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I"] #, "D"] #, "N", "C", "ANN"]
extend-ignore = [
    "D213", "D203"
]

[tool.codespell]
skip = "poetry.lock,examples/*,tmp/*"
